--- a/css/styles.css
+++ b/css/styles.css
@@ -59,9 +59,9 @@ img {
 }
 
 .container {
-  width: 1158px;
+  max-width: 320px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 0 16px;
 }
 
 /*Head*/
@@ -73,7 +73,6 @@ img {
   line-height: 1.17; /* 116.667% */
   letter-spacing: 0.54px;
   text-transform: uppercase;
-  margin-right: 76px;
   display: flex;
 }
 
@@ -89,6 +88,7 @@ img {
 .head {
   display: flex;
   justify-content: space-between;
+  padding: 17px 16px;
 }
 
 .nav-header {
@@ -96,7 +96,7 @@ img {
   align-items: center;
 }
 .menu-header {
-  display: flex;
+  display: none;
 }
 .header-contact-list {
   display: flex;
@@ -135,6 +135,7 @@ img {
 .contact {
   font-style: normal;
   padding: 24px;
+  display: none;
 }
 
 .contact-link {
@@ -146,12 +147,17 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.mobile-head-menu {
+  display: block;
+  background: transparent;
+  border: 0;
+}
+
 /*Section 1 Hero Header*/
 
 .hero-section {
   background-color: #2e2f42;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding: 72px 0;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -167,13 +173,17 @@ img {
 .hero-title {
   color: #fff;
   text-align: center;
-  font-size: 56px;
-  line-height: 1.07; /* 107.143% */
-  letter-spacing: 1.12px;
+  font-size: 36px;
+  line-height: 1.11; /* 111.111% */
+  letter-spacing: 0.72px;
   max-width: 496px;
-  margin-bottom: 48px;
+  margin-bottom: 72px;
+  text-transform: capitalize;
+  font-weight: 700;
 }
-
+.wrap-hero {
+  max-width: 250px;
+}
 .button {
   color: #ffffff;
   background-color: #4d5ae5;
@@ -205,19 +215,20 @@ img {
   overflow: hidden;
 }
 .features {
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .features-list {
   display: flex;
-  gap: 24px;
+  gap: 72px;
+  flex-direction: column;
 }
 .features-list-items {
-  width: calc((100% - 3 * 24px) / 4);
+  width: auto;
 }
 
 .features-icon {
-  display: flex;
+  display: none;
   height: 112px;
   align-items: center;
   justify-content: center;
@@ -228,39 +239,47 @@ img {
 }
 .subtitle-features {
   color: #2e2f42;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2; /* 120% */
-  letter-spacing: 0.4px;
   margin-bottom: 8px;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.111; /* 111.111% */
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
 }
 
 .text-features {
   color: #434455;
   font-size: 16px;
   line-height: 1.5; /* 150% */
-  letter-spacing: 0.32px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
 }
 
 /*Section 3 Our Team*/
 .team-section {
   background-color: #f4f4fd;
-  padding: 120px 0;
+  padding: 96px 0;
 }
 .team-list {
   display: flex;
-  gap: 24px;
+  gap: 72px;
+  flex-direction: column;
 }
+
 .team-title {
   margin-bottom: 72px;
 }
 .cards-team {
   background-color: #ffffff;
-  width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+.team-img {
+  width: 100%;
+}
+
 .team-card-text {
   padding: 32px 0;
 }
@@ -277,6 +296,7 @@ img {
 
 .team-section .text {
   text-align: center;
+  margin-bottom: 8px;
 }
 .team-card-social {
   display: flex;
@@ -324,11 +344,16 @@ img {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+  flex-direction: column;
 }
 .portfolio-cards {
   background: var(--WHITE, #fff);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  width: calc((100% - 48px) / 3);
+  width: auto;
+}
+
+.portfolio-img {
+  width: 100%;
 }
 
 .portfolio-p-hidden {
@@ -377,14 +402,23 @@ img {
 /*Footer*/
 .footer-section {
   background-color: #2e2f42;
-  padding: 100px 0;
+  padding: 96px 0;
 }
+
+.footer {
+  display: flex;
+  align-items: baseline;
+  flex-wrap: wrap;
+  gap: 72px;
+}
+
 .footer-section .studio {
   color: #f4f4fd;
 }
 .footer-section .logo {
   margin-bottom: 16px;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
 }
 .footer-section .text {
   color: #f4f4fd;
@@ -392,11 +426,6 @@ img {
   margin: 0;
 }
 .footer-logo {
-  margin-right: 120px;
-}
-.footer {
-  display: flex;
-  align-items: baseline;
 }
 
 .footer-social-link {
@@ -414,17 +443,20 @@ img {
 .footer-social-link:focus {
   background-color: #31d0aa;
 }
-
+.footer-social {
+  width: 100%;
+}
 .footer-card-social {
   display: flex;
   gap: 16px;
   margin-top: 16px;
+  justify-content: center;
 }
 
 .footer-subs {
   display: flex;
   flex-direction: column;
-  margin-left: 80px;
+  width: 100%;
 }
 .footer-social-text {
   font-size: 16px;
@@ -434,10 +466,14 @@ img {
   color: #ffffff;
   margin-bottom: 16px;
   margin-left: 0;
+  text-align: center;
+  width: 100%;
 }
 .footer-subs-form {
   display: flex;
   gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .footer-subs-input {
   font-size: 12px;
@@ -689,3 +725,342 @@ img {
 }
 
 /* Modal popup  end*/
+
+/* MEDIA */
+@media screen and (min-width: 320px) {
+}
+
+/* Media Tablet */
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    width: auto;
+  }
+  /*end header TAB*/
+  .head {
+    padding: 0 16px 0 16px;
+  }
+  .mobile-head-menu {
+    display: none;
+  }
+  .menu-header {
+    display: flex;
+  }
+  .contact {
+    font-style: normal;
+    padding: 16px;
+    display: flex;
+  }
+  .header-contact-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .contact-link {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.48px;
+  }
+
+  .logo {
+    margin-right: 120px;
+  }
+
+  /*end header TAB*/
+
+  /* Hero TAB*/
+  .hero-title {
+    font-size: 56px;
+    line-height: 1.07; /* 107.143% */
+    letter-spacing: 1.12px;
+    margin-bottom: 36px;
+  }
+  /* end Hero Tab*/
+
+  /* features TAB */
+  .features {
+    padding: 120px 0;
+  }
+
+  .features-list {
+    flex-direction: row;
+    gap: 72px 24px;
+    flex-wrap: wrap;
+  }
+
+  .features-list-items {
+    width: calc((100% - 24px) / 2);
+  }
+
+  .subtitle-features {
+    text-align: start;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11; /* 111.111% */
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+  }
+
+  .text-features {
+    line-height: 1.5; /* 150% */
+    letter-spacing: 0.32px;
+  }
+  /* end features TAB */
+
+  /* team section TAB */
+  .team-section {
+    padding: 120px 0;
+  }
+
+  .team-list {
+    gap: 64px 24px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .card-team {
+    width: calc((100% - 72px) / 4);
+  }
+
+  .team-section .text {
+    font-weight: 400;
+  }
+
+  /* team section TAB */
+
+  /* Portfolio section TAB*/
+  .portfolio-cards {
+    width: calc((100% - 48px) / 2);
+  }
+
+  .portfolio-list {
+    flex-direction: row;
+  }
+  /* Portfolio section TAB */
+
+  /* Footer TAB */
+  .footer-section {
+    padding: 96px 0;
+  }
+  .footer {
+    align-items: baseline;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+    justify-content: center;
+  }
+  .footer-logo {
+  }
+
+  .footer-section .logo {
+    display: inline-block;
+    margin-right: 76px;
+  }
+
+  .logo {
+    margin-right: 76px;
+  }
+
+  .footer-card-social {
+    justify-content: flex-start;
+  }
+
+  .footer-social {
+    width: auto;
+  }
+  .footer-social-text {
+    text-align: start;
+  }
+
+  .footer-subs {
+    width: auto;
+  }
+
+  .footer-social-text {
+    width: auto;
+  }
+
+  .footer-subs-form {
+  }
+
+  /* Footer TAB */
+}
+
+/* Media PC */
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+
+  /* header PC*/
+  .head {
+    display: flex;
+    justify-content: space-between;
+  }
+  .logo {
+    margin-right: 76px;
+  }
+  .menu-header {
+    display: flex;
+  }
+
+  .contact {
+    font-style: normal;
+    padding: 24px;
+  }
+
+  .header-contact-list {
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .contact-link {
+    font-size: 16px;
+    line-height: 1.5; /* 150% */
+    letter-spacing: 0.32px;
+  }
+
+  /* end Header PC*/
+
+  /* Hero PC*/
+  .hero-section {
+    padding-top: 188px;
+    padding-bottom: 188px;
+  }
+
+  .hero-title {
+    margin-bottom: 48px;
+  }
+  /* end Hero PC*/
+
+  /* features PC */
+  .features {
+    padding: 120px 0;
+  }
+
+  .features-icon {
+    display: flex;
+  }
+
+  .features-list {
+    flex-direction: row;
+    gap: 24px;
+  }
+
+  .features-list-items {
+    width: calc((100% - 3 * 24px) / 4);
+  }
+
+  .subtitle-features {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2; /* 120% */
+    letter-spacing: 0.4px;
+    text-align: start;
+  }
+  .text-features {
+    font-weight: 400;
+  }
+
+  /* end features PC */
+
+  /* team section PC */
+  .team-section {
+    padding: 120px 0;
+  }
+
+  .team-list {
+    gap: 32px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+
+  .card-team {
+    width: calc((100% - 72px) / 4);
+  }
+
+  /* team section PC */
+
+  /* Portfolio section PC*/
+  .portfolio-cards {
+    width: calc((100% - 48px) / 3);
+  }
+
+  .portfolio-list {
+    flex-direction: row;
+  }
+
+  /* Portfolio section PC */
+
+  /* Footer PC */
+  .footer-section {
+    padding: 100px 0;
+  }
+
+  .footer {
+    align-items: baseline;
+    flex-wrap: nowrap;
+    gap: unset;
+  }
+
+  .footer-logo {
+    margin-right: 120px;
+  }
+
+  .footer-section .logo {
+    display: inline-block;
+  }
+
+  .logo {
+    margin-right: 76px;
+  }
+  .footer-social {
+    width: auto;
+  }
+  .footer-card-social {
+    justify-content: flex-start;
+  }
+
+  .footer-social-text {
+    text-align: start;
+  }
+
+  .footer-subs {
+    margin-left: 80px;
+    width: auto;
+  }
+
+  .footer-social-text {
+    width: auto;
+  }
+
+  .footer-subs-form {
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+  }
+
+  /* Footer PC */
+}
+
+@media (min-resolution: 96dpi) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/peopleoffice-hero.jpg');
+  }
+}
+
+@media (min-resolution: 192dpi) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/peopleoffice-herox2.jpg');
+  }
+}
